--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="head_box">
             <nav>
                 <div class="logo">
-                    <h1>Netflix</h1>
+                    <img src="images/Netflix-Logo.png">
                 </div>
                 <div class="nav_btns">
                     <select>
-                        <option value="1">English</option>
+                        <option value="1" selected>English</option>
                         <option value="2">Hindi</option>
                     </select>
                     <a href="#">Sign In</a>
